Fixing Card Spacing

--- a/Activity 1/School Website/styles.css
+++ b/Activity 1/School Website/styles.css
@@ -230,24 +230,30 @@ iframe {
 }
 
 .stack {
-    padding: 10px 5px;
+    padding: 50px 0;
 }
 
-.row {
+.card-row {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     background-color: white;
-    margin: 0 -5px;
-    padding-bottom: 10px;
+    padding: 10px 80px;
 }
 
 .card {
+    width: min-content;
     box-shadow: 0 0 8px  rgba(0,0,0,0.2);
     transition: 0.3s;
+    margin: 0 1%;
 }
   
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card-image {
+    height: 300px;
+    width: 300px;
 }
 
 .content {
